# mcp-oracle-11g

./: .gitignore  LICENSE  README.md  run.py
pkg/: Oracle11gTools.py  pyproject.toml
pkg/db_oracle_get_mcp/: __init__.py
pkg/db_oracle_get_mcp_sse/: __init__.py
